--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/vuetify": "^1.11.2",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2"
